# zenoh-flow-perf

./: .gitignore  Cargo.toml  Makefile  README.md  analize_dds_pcap.py  lat-parse.py  parse.py  requirements.txt  run-breakdown-tests.sh  run-single-process-thr.sh  run-single-process.sh  run-static.sh  run-tests.sh  run-thr-tests.sh
analize-zenoh-pcap/: Cargo.toml
analize-zenoh-pcap/src/: main.rs
analyze-zenoh-pcap/: Cargo.toml
analyze-zenoh-pcap/src/: analysis.rs  codecs.rs  lib.rs  types.rs  utils.rs
comparison/cyclonedds/ping-pong/: CMakeLists.txt  Evaluation.idl  ping-pong.cpp
comparison/erdos/python/: latency.py
comparison/erdos/rust/: Cargo.toml
comparison/erdos/rust/latency/: Cargo.toml
comparison/erdos/rust/latency/src/: main.rs
comparison/erdos/rust/throughput/: Cargo.toml
comparison/erdos/rust/throughput/src/: main.rs
comparison/ros/eval-ws/devel/: .catkin
comparison/ros/eval-ws/devel/include/eval_interfaces/: Evaluation.h  Thr.h
comparison/ros/eval-ws/devel/lib/pkgconfig/: eval_interfaces.pc  receiver.pc  sender.pc
comparison/ros/eval-ws/devel/lib/python3/dist-packages/eval_interfaces/msg/: _Evaluation.py  _Thr.py  __init__.py
comparison/ros/eval-ws/devel/share/common-lisp/ros/eval_interfaces/msg/: Evaluation.lisp  Thr.lisp  _package.lisp  _package_Evaluation.lisp  _package_Thr.lisp  eval_interfaces-msg.asd
comparison/ros/eval-ws/devel/share/eval_interfaces/cmake/: eval_interfaces-msg-extras.cmake  eval_interfaces-msg-paths.cmake  eval_interfacesConfig.cmake
comparison/ros/eval-ws/devel/share/gennodejs/ros/eval_interfaces/msg/: Evaluation.js  Thr.js  _index.js
comparison/ros/eval-ws/devel/share/receiver/cmake/: receiverConfig.cmake
comparison/ros/eval-ws/devel/share/roseus/ros/eval_interfaces/: manifest.l
comparison/ros/eval-ws/devel/share/roseus/ros/eval_interfaces/msg/: Evaluation.l  Thr.l
comparison/ros/eval-ws/devel/share/sender/cmake/: senderConfig.cmake
comparison/ros/eval-ws/src/: CMakeLists.txt
comparison/ros/eval-ws/src/compute/: CMakeLists.txt
comparison/ros/eval-ws/src/compute/include/compute/: compute.hpp
comparison/ros/eval-ws/src/compute/src/: compute.cpp  node_main.cpp
comparison/ros/eval-ws/src/compute_thr/: CMakeLists.txt
comparison/ros/eval-ws/src/compute_thr/include/compute/: compute.hpp
comparison/ros/eval-ws/src/compute_thr/src/: compute.cpp
comparison/ros/eval-ws/src/eval_interfaces/: CMakeLists.txt
comparison/ros/eval-ws/src/receiver/: CMakeLists.txt
comparison/ros/eval-ws/src/receiver/include/receiver/: receiver.hpp
comparison/ros/eval-ws/src/receiver/src/: node_main.cpp  receiver.cpp
comparison/ros/eval-ws/src/receiver_thr/: CMakeLists.txt
comparison/ros/eval-ws/src/receiver_thr/src/: receiver.cpp
comparison/ros/eval-ws/src/sender/: CMakeLists.txt
comparison/ros/eval-ws/src/sender/include/sender/: sender.hpp
comparison/ros/eval-ws/src/sender/src/: node_main.cpp  sender.cpp
comparison/ros/eval-ws/src/sender_thr/: CMakeLists.txt
comparison/ros/eval-ws/src/sender_thr/src/: sender.cpp
comparison/ros2/eval-ws/: lat-parse.py  run-tests.sh
comparison/ros2/eval-ws/src/compute/: CMakeLists.txt  package.xml
comparison/ros2/eval-ws/src/compute/include/compute/: compute.hpp
comparison/ros2/eval-ws/src/compute/src/: compute.cpp  node_main.cpp
comparison/ros2/eval-ws/src/compute_thr/: CMakeLists.txt
comparison/ros2/eval-ws/src/eval_interfaces/: CMakeLists.txt  package.xml
comparison/ros2/eval-ws/src/eval_interfaces/msg/: Thr.msg
comparison/ros2/eval-ws/src/receiver/: CMakeLists.txt  package.xml
comparison/ros2/eval-ws/src/receiver/include/receiver/: receiver.hpp
comparison/ros2/eval-ws/src/receiver/src/: node_main.cpp  receiver.cpp
comparison/ros2/eval-ws/src/receiver_thr/: CMakeLists.txt
comparison/ros2/eval-ws/src/receiver_thr/src/: receiver.cpp
comparison/ros2/eval-ws/src/sender/: CMakeLists.txt  package.xml
comparison/ros2/eval-ws/src/sender/include/sender/: sender.hpp
comparison/ros2/eval-ws/src/sender/src/: node_main.cpp  sender.cpp
comparison/ros2/eval-ws/src/sender_thr/: CMakeLists.txt
comparison/ros2/mont_blanc_ws/src/mont_blanc/launch/: mont_blanc_all.launch.py  mont_blanc_robot.launch.py
comparison/ros2/mont_blanc_ws/src/nodes/: CMakeLists.txt
comparison/ros2/mont_blanc_ws/src/nodes/src/: arequipa_node.cpp  nodes.cpp
descriptors/: lat-pipeline.yaml  thr-pipeline.yaml
examples/: dyn-noop-print.rs  dyn-noop.rs  dyn-op-last.rs  dyn-ping.rs  dyn-pong-scal.rs  dyn-pong.rs  dyn-sink.rs  dyn-source.rs  dyn-thr-sink.rs  dyn-thr-source.rs  lat-dynamic.rs  lat-flume.rs  lat-link.rs  lat-serde.rs  lat-sink.rs  lat-source-op-dynamic.rs  lat-source-op-static.rs  lat-source-sink-dynamic.rs  lat-source-sink-static.rs  lat-source.rs  lat-static.rs  lat-zenoh.rs  ping-pong-static.rs  ping-pong-zenoh.rs  scal-dynamic.rs  scal-static.rs  serde-bench.rs  thr-dynamic.rs  thr-flume.rs  thr-link.rs  thr-sink.rs  thr-source.rs  thr-static.rs
python/: latency.yml  noop.py  noop.yml  ping-src.py  pong-sink.py  sink.py  sink.yml  source-sink.yml  source.py  source.yml
src/: lib.rs  runtime.rs
src/nodes/: mod.rs  operators.rs  sinks.rs  sources.rs
src/operators/: mod.rs  operators.rs  sinks.rs  sources.rs
