[package]
name = "zenoh-flow-perf"
version = "0.4.0"
repository = "https://github.com/eclipse-zenoh/zenoh-flow"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh-Flow: zenoh-based data-flow programming framework for computations that span from the cloud to the device."
readme = "README.md"

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
async-trait = "0.1.50"
bincode = "1"
env_logger = "0.9"
futures = "0.3.5"
log = "0.4"
rand = "0.8.0"
serde = { version = "1.0.55", features = ["derive"] }
serde_json = "1.0.78"
# typetag = "0.1"
uhlc = "0.5"
uuid = { version = "1.1", features = ["serde", "v4"] }
zenoh = { version = "0.6.0-beta.1" }
zenoh-flow = { git = "https://github.com/ZettaScaleLabs/zenoh-flow.git", branch = "dev/v0.4.0" }

[dev-dependencies]
async-ctrlc ={version = "1.2.0", features = ["stream"]}
async-std = { version = "=1.12.0", features = ["attributes","unstable"] }
async-trait = "0.1.50"
clap = { version = "3.1", features = ["derive"] }
flume = "0.10"
futures = "0.3.5"
rand = "0.8.0"
serde = { version = "1.0.55", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[[example]]
name = "dyn-sink"
crate-type = ["cdylib"]

[[example]]
name = "dyn-source"
crate-type = ["cdylib"]

[[example]]
name = "dyn-noop"
crate-type = ["cdylib"]

[[example]]
name = "dyn-noop-print"
crate-type = ["cdylib"]

[[example]]
name = "dyn-ping"
crate-type = ["cdylib"]

[[example]]
name = "dyn-pong"
crate-type = ["cdylib"]

[[example]]
name = "dyn-op-last"
crate-type = ["cdylib"]

[[example]]
name = "dyn-pong-scal"
crate-type = ["cdylib"]

[[example]]
name = "dyn-thr-source"
crate-type = ["cdylib"]

[[example]]
name = "dyn-thr-sink"
crate-type = ["cdylib"]


[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]


[profile.release]
debug=false
lto="fat"
codegen-units=1
opt-level=3
panic="abort"