[package]
name = "throughput"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
erdos = "0.4.0"
env_logger = "0.9"
serde = { version = "1.0.55", features = ["derive"] }
log = "0.4"
num_cpus = "1.13.1"